--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div>
     </div>
     <div class="container3">
-        <img class="facebook" src="/images/Facebook.svg" alt="facebook-icon">
-        <img class="apple" src="/images/apple.png" alt="apple-icon">
-        <img class="google" src="/images/google.svg" alt="google-icon">
+        <img class="facebook" src="./images/Facebook.svg" alt="facebook-icon">
+        <img class="apple" src="./images/apple.png" alt="apple-icon">
+        <img class="google" src="./images/google.svg" alt="google-icon">
     </div>
     <!-- <section class="head">
         <h1 class="sign">sign in to</h1>
