--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 If you don’t have an account register
             </p>
             <p>You can  <a href="/signin.html">Register here !</a> </p>
-            <img class="man" src="/images/Saly-14.svg" alt="standing-man">
+            <img class="man" src="./images/Saly-14.svg" alt="standing-man">
         </div>
         <div class="right">
             <h1 class="sign">Sign in</h1>
